test/corpus/invalid_but_accept.txt
================================================================================
Incomplete Symbol Lacking Name Component
================================================================================

my-ns/

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)))

================================================================================
Incomplete Keyword Lacking Name Component
================================================================================

:my-ns/

--------------------------------------------------------------------------------

(source
  (kwd_lit
    (kwd_ns)))
