test/corpus/map_lit.txt
================================================================================
Empty Map
================================================================================

{}

--------------------------------------------------------------------------------

(source
  (map_lit))

================================================================================
Simple Map
================================================================================

{:a 1 :b 2}

--------------------------------------------------------------------------------

(source
  (map_lit
    (kwd_lit
      (kwd_name))
    (num_lit)
    (kwd_lit
      (kwd_name))
    (num_lit)))

================================================================================
Deeper Map
================================================================================

{:paths ["src"]
 :deps {clj-kondo/clj-kondo {:mvn/version "2020.09.09"}}}

--------------------------------------------------------------------------------

(source
  (map_lit
    (kwd_lit
      (kwd_name))
    (vec_lit
      (str_lit
        (str_content)))
    (kwd_lit
      (kwd_name))
    (map_lit
      (sym_lit
        (sym_ns)
        (sym_name))
      (map_lit
        (kwd_lit
          (kwd_ns)
          (kwd_name))
        (str_lit
          (str_content))))))

================================================================================
Map with Comma
================================================================================

{:x 1,
 :y 2}

--------------------------------------------------------------------------------

(source
  (map_lit
    (kwd_lit
      (kwd_name))
    (num_lit)
    (kwd_lit
      (kwd_name))
    (num_lit)))
