test/corpus/meta_lit.txt
================================================================================
Symbol Metadata
================================================================================

^String []

--------------------------------------------------------------------------------

(source
  (meta_lit
    (sym_lit
      (sym_name)))
  (vec_lit))

================================================================================
Keyword Metadata
================================================================================

^:private {}

--------------------------------------------------------------------------------

(source
  (meta_lit
    (kwd_lit
      (kwd_name)))
  (map_lit))

================================================================================
String Metadata
================================================================================

^"gnarly" {}

--------------------------------------------------------------------------------

(source
  (meta_lit
    (str_lit
      (str_content)))
  (map_lit))

================================================================================
Map Metadata
================================================================================

^{:x 0 :y 1} #{}

--------------------------------------------------------------------------------

(source
  (meta_lit
    (map_lit
      (kwd_lit
        (kwd_name))
      (num_lit)
      (kwd_lit
        (kwd_name))
      (num_lit)))
  (set_lit))

================================================================================
Reader Conditional Metadata
================================================================================

^#?(:clj "vanilla" :cljr "strawberry" :cljs "chocolate") []

--------------------------------------------------------------------------------

(source
  (meta_lit
    (read_cond_lit
      (kwd_lit
        (kwd_name))
      (str_lit
        (str_content))
      (kwd_lit
        (kwd_name))
      (str_lit
        (str_content))
      (kwd_lit
        (kwd_name))
      (str_lit
        (str_content))))
  (vec_lit))

================================================================================
Multiple Bits of Metadata
================================================================================

^:wake ^:sit ^:sleep #{}

--------------------------------------------------------------------------------

(source
  (meta_lit
    (kwd_lit
      (kwd_name)))
  (meta_lit
    (kwd_lit
      (kwd_name)))
  (meta_lit
    (kwd_lit
      (kwd_name)))
  (set_lit))

================================================================================
Tagged Literal Metadata
================================================================================

^#/(data) thing

--------------------------------------------------------------------------------

(source
  (meta_lit
    (tagged_or_ctor_lit
      (sym_lit
        (sym_name))
      (list_lit
        (sym_lit
          (sym_name)))))
  (sym_lit
    (sym_name)))

================================================================================
Evaling Literal Metadata
================================================================================

^#=(keyword "a") []

--------------------------------------------------------------------------------

(source
  (meta_lit
    (evaling_lit
      (list_lit
        (sym_lit
          (sym_name))
        (str_lit
          (str_content)))))
  (vec_lit))
