test/corpus/regex_lit.txt
================================================================================
Simple Regular Expression
================================================================================

#"."

--------------------------------------------------------------------------------

(source
  (regex_lit
    (regex_content)))

================================================================================
Hex Digits Regular Expression
================================================================================

#"[0-9a-fA-F]+"

--------------------------------------------------------------------------------

(source
  (regex_lit
    (regex_content)))
