test/corpus/str_lit.txt
================================================================================
Simple String
================================================================================

"hello there"

--------------------------------------------------------------------------------

(source
  (str_lit
    (str_content)))

================================================================================
String with Escapes
================================================================================

"first line\nsecond\tline"

--------------------------------------------------------------------------------

(source
  (str_lit
    (str_content)))

================================================================================
Multiline String
================================================================================

"this is the first line
and what is this one?"

--------------------------------------------------------------------------------

(source
  (str_lit
    (str_content)))
