test/corpus/sym_lit.txt
================================================================================
Simple Symbol
================================================================================

def

--------------------------------------------------------------------------------

(source
  (sym_lit))

================================================================================
Symbol with Prefix
================================================================================

clojure.string/blank?

--------------------------------------------------------------------------------

(source
  (sym_lit))

================================================================================
Division Symbol
================================================================================

/

--------------------------------------------------------------------------------

(source
  (sym_lit))

================================================================================
Namespaced Division Symbol
================================================================================

clojure.core//

--------------------------------------------------------------------------------

(source
  (sym_lit)
  (sym_lit))

================================================================================
Division Symbol followed by delimiter
================================================================================

(+ - * /)

--------------------------------------------------------------------------------

(source
  (list_lit
    (sym_lit)
    (sym_lit)
    (sym_lit)
    (sym_lit)))
