test/corpus/sym_val_lit.txt
================================================================================
Inf
================================================================================

##Inf

--------------------------------------------------------------------------------

(source
  (sym_val_lit
    (sym_lit)))

================================================================================
-Inf
================================================================================

##-Inf

--------------------------------------------------------------------------------

(source
  (sym_val_lit
    (sym_lit)))

================================================================================
NaN
================================================================================

##NaN

--------------------------------------------------------------------------------

(source
  (sym_val_lit
    (sym_lit)))

================================================================================
Symbolic Value Literal with Evaling Literal
================================================================================

###=(identity NaN)

--------------------------------------------------------------------------------

(source
  (sym_val_lit
    (evaling_lit
      (list_lit
        (sym_lit)
        (sym_lit)))))
